# JSU_Campus_Network

./: .gitignore  CMakeLists.txt  README.md  config.ini
src/: config.cpp  config.h  http.cpp  http.h  logger.cpp  logger.h  login.cpp  login.h  main.cpp  monitor.cpp  monitor.h  network.cpp  network.h  timer.cpp  timer.h  tray.cpp  tray.h  util.h  wifi.cpp  wifi.h
